--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 </head>
 
 <body>
-  <noscript>You need to enable JavaScript to run this app</noscript>
+  <noscript>You need to enable JavaScript to run this app. cập nhật header và body</noscript>
   <div id="root"></div>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
