--- a/public/index.html
+++ b/public/index.html
@@ -16,14 +16,13 @@
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Phế liệu Thành Phát</title>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16905015451">
-</script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-9DHMQ7SWYD"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'AW-16905015451');
+  gtag('config', 'G-9DHMQ7SWYD');
 </script>
 </head>
 
