--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,28 @@
 
   gtag('config', 'G-9DHMQ7SWYD');
 </script>
+<!-- Event snippet for Nhấp để gọi conversion page
+In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+<!-- Event snippet for Cuộc gọi (1) conversion page
+In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+<script>
+  function gtag_report_conversion(url) {
+    var callback = function () {
+      if (typeof(url) != 'undefined') {
+        window.location = url;
+      }
+    };
+    gtag('event', 'conversion', {
+        'send_to': 'AW-16905015451/pVWBCK6z4KYaEJuh-Pw-',
+        'value': 1.0,
+        'currency': 'VND',
+        'event_callback': callback
+    });
+    return false;
+  }
+  </script>
+  
+  
 </head>
 
 <body>
