--- a/public/index.html
+++ b/public/index.html
@@ -15,43 +15,16 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <title>Phế liệu Thành Phát</title>
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-9DHMQ7SWYD"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=AW-17432110163"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-9DHMQ7SWYD');
-</script>
-<!-- Event snippet for Nhấp để gọi conversion page
-In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
-<!-- Event snippet for Cuộc gọi (1) conversion page
-In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
-<script>
-  function gtag_report_conversion(url) {
-    var callback = function () {
-      if (typeof(url) != 'undefined') {
-        window.location = url;
-      }
-    };
-    gtag('event', 'conversion', {
-        'send_to': 'AW-16905015451/pVWBCK6z4KYaEJuh-Pw-',
-        'value': 1.0,
-        'currency': 'VND',
-        'event_callback': callback
-    });
-    return false;
-  }
+    gtag('config', 'AW-17432110163');
   </script>
-  <!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-K9Z9HTNP');</script>
-<!-- End Google Tag Manager -->
-  
+
 </head>
 
 <body>
